2005-09-09  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_inline): add
	'class="external"' to uri liks (hikidoc:18).

2005-09-08  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.db, style/default/html_formatter.rb: use
	the HikiDoc library.
	* hiki/hiki_formatter.rb: removed.
	* style/rd+/html_formatter.rb: remove the inheritance of
	HikiFormatter.

2005-09-06  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/ja/rss.rb: support whole HTML output (instead of
	title-only).

2005-09-05  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/rss.rb (rss_body),
	misc/plugin/ja/rss.rb (label_rss_mode_candidate): RSS which lists
	only titles of updated pages is supported (report by vette).

	* misc/plugin/footnote.rb (render): support a block element
	argument (patch by U.Nakamura).

2005-09-03  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/sitemap.rb: code cleanup (report by Atsushi Koga).

2005-09-01  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (make_link): support anchors in
	bracket links.

	* misc/plugin/orphan.rb (orphan_pages): code cleanup (reported by
	ISOBE, Kazuhiko).

2005-08-30  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/rss.rb (rss): deal with the If-Modified-Since header
	in a request.

2005-08-29  Kouhei Yanagita <yanagi@shakenbu.org>
	* test/test_hikifarm.rb (test_create_wiki): the test failed
	because one of the arguments of Hikifarm#create_wiki is lack.

	* test/test_default_parser.rb (test_link, test_url): add some tests.

	* style/default/parser.rb (inline_impl): the href of URL was not
	escaped at tokens of URL_RE.

2005-08-28  Kouhei Yanagita <yanagi@shakenbu.org>
	* test/test_default_parser.rb: (test_emphasis, test_strong,
	test_delete): add new test methods.

	* style/default/parser.rb: Remove the HikiStack class and use
	Array instead.  perform some refactorings.

	* misc/hikifarm/index.cgi: update HIKIFARM_RELEASE_DATE. I've
	forgotten to do it.
